--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
- 
+  <table>
+    <tr>
+      <th>Title</th>
+      <th>Author</th>
+      <th>Pages</th>
+      <th>Read Status</th>
+    </tr>
+  </table>
   <button class="btn">New Book</button>
   <script src="script.js"></script>
 </body>
